--- a/tests/test1.yaml
+++ b/tests/test1.yaml
@@ -951,6 +951,10 @@ output:
   - platform: my9231
     id: my_5
     channel: 5
+  - platform: dimmer
+    id: dimmer1
+    gate_pin: GPIO5
+    zero_cross_pin: GPIO20
 
 light:
   - platform: binary
